--- a/myCode/index.html
+++ b/myCode/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>My First Online Course</h1>
+<h1>My First Online Course. Excellent course!</h1>
 </body>
 </html>
