Modified Index.html file

--- a/myCode/Lesson1.html
+++ b/myCode/Lesson1.html
@@ -5,6 +5,6 @@
     <title>First Page</title>
     </head>
     <body>
-    Coursera is gGreaat <span> course
+    Coursera is Greaat <span> course
     </body>
 </html>
